src/gr8/gr8_parser.output
   0  $accept : file $end

   1  file :
   2       | decls

   3  decls : decl
   4        | decls decl

   5  decl : func
   6       | var ';'

   7  func : funcDecl ';'
   8       | funcDef

   9  funcCall : tUSE exprs tFOR tIDENTIFIER
  10           | tDO tIDENTIFIER

  11  funcDef : tDEFINE type tFUNCTION tIDENTIFIER tAS block
  12          | tDEFINE tPROCEDURE tIDENTIFIER tAS block
  13          | tDEFINE type tFUNCTION tIDENTIFIER tON params tAS block
  14          | tDEFINE tPROCEDURE tIDENTIFIER tON params tAS block
  15          | tDEFINE tPUBLIC type tFUNCTION tIDENTIFIER tAS block
  16          | tDEFINE tPUBLIC tPROCEDURE tIDENTIFIER tAS block
  17          | tDEFINE tPUBLIC type tFUNCTION tIDENTIFIER tON params tAS block
  18          | tDEFINE tPUBLIC tPROCEDURE tIDENTIFIER tON params tAS block

  19  funcDecl : type tFUNCTION tIDENTIFIER
  20           | tPROCEDURE tIDENTIFIER
  21           | type tFUNCTION tIDENTIFIER tUSES params
  22           | tPROCEDURE tIDENTIFIER tUSES params
  23           | tPUBLIC type tFUNCTION tIDENTIFIER
  24           | tPUBLIC tPROCEDURE tIDENTIFIER
  25           | tPUBLIC type tFUNCTION tIDENTIFIER tUSES params
  26           | tPUBLIC tPROCEDURE tIDENTIFIER tUSES params
  27           | tUSE type tFUNCTION tIDENTIFIER
  28           | tUSE tPROCEDURE tIDENTIFIER
  29           | tUSE type tFUNCTION tIDENTIFIER tUSES params
  30           | tUSE tPROCEDURE tIDENTIFIER tUSES params

  31  params : param
  32         | params ',' param

  33  param : type tIDENTIFIER

  34  blockVars : blockVar ';'
  35            | blockVars blockVar ';'

  36  blockVar : type tIDENTIFIER
  37           | type tIDENTIFIER '(' tINITIALLY expr ')'

  38  var : type tIDENTIFIER
  39      | type tIDENTIFIER '(' tINITIALLY literal ')'
  40      | tPUBLIC type tIDENTIFIER
  41      | tPUBLIC type tIDENTIFIER '(' tINITIALLY literal ')'
  42      | tUSE type tIDENTIFIER

  43  type : tTYPEINT
  44       | intPtr tFAKE
  45       | tTYPEDOUBLE
  46       | doublePtr tFAKE
  47       | tTYPESTRING
  48       | stringPtr tTYPESTRING

  49  stringPtr : tFAKE
  50            | tFAKE stringPtr

  51  doublePtr : tTYPEDOUBLE
  52            | tTYPEDOUBLE doublePtr

  53  intPtr : tTYPEINT
  54         | tTYPEINT intPtr

  55  block : '{' '}'
  56        | '{' blockVars '}'
  57        | '{' blockInstrs '}'
  58        | '{' blockVars blockInstrs '}'

  59  blockInstrs : instrs
  60              | finalInstr
  61              | instrs finalInstr

  62  instrs : instr
  63         | instrs instr

  64  finalInstr : tAGAIN ';'
  65             | tAGAIN integer ';'
  66             | tSTOP ';'
  67             | tSTOP integer ';'
  68             | tRETURN ';'
  69             | tRETURN expr ';'

  70  instr : expr ';'
  71        | tPRINT expr ';'
  72        | tPRINTLN expr ';'
  73        | tASSIGN expr tTO lval ';'
  74        | instrCond
  75        | sweeping
  76        | block

  77  sweeping : tSWEEPING lval tFROM expr tTO expr tDO block
  78           | tSWEEPING lval tFROM expr tTO expr tBY expr tDO block

  79  instrCond : tIF ifs

  80  ifs : expr tTHEN block
  81      | expr tTHEN block tELSE block
  82      | expr tTHEN block tELSIF ifs

  83  exprs : expr
  84        | exprs ',' expr

  85  expr : literal
  86       | funcCall
  87       | '(' expr ')'
  88       | '+' expr
  89       | '-' expr
  90       | expr tOBJECTS
  91       | expr '+' expr
  92       | expr '-' expr
  93       | expr '*' expr
  94       | expr '/' expr
  95       | expr '%' expr
  96       | expr '<' expr
  97       | expr '>' expr
  98       | expr tEQUALS expr
  99       | '!' expr
 100       | expr tAND expr
 101       | expr tOR expr
 102       | lval
 103       | lval '?'
 104       | tINPUT

 105  lval : tCELL expr tAT lval
 106       | tCELL expr tAT '(' expr ')'
 107       | tIDENTIFIER

 108  literal : integer
 109          | double
 110          | string
 111          | tNULL

 112  integer : tINT

 113  double : tDOUBLE

 114  string : tSTRING
 115         | string tSTRING

state 0
	$accept : . file $end  (0)
	file : .  (1)

	tFAKE  shift 1
	tUSE  shift 2
	tPUBLIC  shift 3
	tPROCEDURE  shift 4
	tDEFINE  shift 5
	tTYPEINT  shift 6
	tTYPEDOUBLE  shift 7
	tTYPESTRING  shift 8
	$end  reduce 1

	file  goto 9
	decls  goto 10
	intPtr  goto 11
	doublePtr  goto 12
	stringPtr  goto 13
	type  goto 14
	var  goto 15
	funcDecl  goto 16
	funcDef  goto 17
	func  goto 18
	decl  goto 19


state 1
	stringPtr : tFAKE .  (49)
	stringPtr : tFAKE . stringPtr  (50)

	tFAKE  shift 1
	tTYPESTRING  reduce 49

	stringPtr  goto 20


state 2
	funcDecl : tUSE . type tFUNCTION tIDENTIFIER  (27)
	funcDecl : tUSE . tPROCEDURE tIDENTIFIER  (28)
	funcDecl : tUSE . type tFUNCTION tIDENTIFIER tUSES params  (29)
	funcDecl : tUSE . tPROCEDURE tIDENTIFIER tUSES params  (30)
	var : tUSE . type tIDENTIFIER  (42)

	tFAKE  shift 1
	tPROCEDURE  shift 21
	tTYPEINT  shift 6
	tTYPEDOUBLE  shift 7
	tTYPESTRING  shift 8
	.  error

	intPtr  goto 11
	doublePtr  goto 12
	stringPtr  goto 13
	type  goto 22


state 3
	funcDecl : tPUBLIC . type tFUNCTION tIDENTIFIER  (23)
	funcDecl : tPUBLIC . tPROCEDURE tIDENTIFIER  (24)
	funcDecl : tPUBLIC . type tFUNCTION tIDENTIFIER tUSES params  (25)
	funcDecl : tPUBLIC . tPROCEDURE tIDENTIFIER tUSES params  (26)
	var : tPUBLIC . type tIDENTIFIER  (40)
	var : tPUBLIC . type tIDENTIFIER '(' tINITIALLY literal ')'  (41)

	tFAKE  shift 1
	tPROCEDURE  shift 23
	tTYPEINT  shift 6
	tTYPEDOUBLE  shift 7
	tTYPESTRING  shift 8
	.  error

	intPtr  goto 11
	doublePtr  goto 12
	stringPtr  goto 13
	type  goto 24


state 4
	funcDecl : tPROCEDURE . tIDENTIFIER  (20)
	funcDecl : tPROCEDURE . tIDENTIFIER tUSES params  (22)

	tIDENTIFIER  shift 25
	.  error


state 5
	funcDef : tDEFINE . type tFUNCTION tIDENTIFIER tAS block  (11)
	funcDef : tDEFINE . tPROCEDURE tIDENTIFIER tAS block  (12)
	funcDef : tDEFINE . type tFUNCTION tIDENTIFIER tON params tAS block  (13)
	funcDef : tDEFINE . tPROCEDURE tIDENTIFIER tON params tAS block  (14)
	funcDef : tDEFINE . tPUBLIC type tFUNCTION tIDENTIFIER tAS block  (15)
	funcDef : tDEFINE . tPUBLIC tPROCEDURE tIDENTIFIER tAS block  (16)
	funcDef : tDEFINE . tPUBLIC type tFUNCTION tIDENTIFIER tON params tAS block  (17)
	funcDef : tDEFINE . tPUBLIC tPROCEDURE tIDENTIFIER tON params tAS block  (18)

	tFAKE  shift 1
	tPUBLIC  shift 26
	tPROCEDURE  shift 27
	tTYPEINT  shift 6
	tTYPEDOUBLE  shift 7
	tTYPESTRING  shift 8
	.  error

	intPtr  goto 11
	doublePtr  goto 12
	stringPtr  goto 13
	type  goto 28


state 6
	type : tTYPEINT .  (43)
	intPtr : tTYPEINT .  (53)
	intPtr : tTYPEINT . intPtr  (54)

	tTYPEINT  shift 29
	tIDENTIFIER  reduce 43
	tFAKE  reduce 53
	tFUNCTION  reduce 43

	intPtr  goto 30


state 7
	type : tTYPEDOUBLE .  (45)
	doublePtr : tTYPEDOUBLE .  (51)
	doublePtr : tTYPEDOUBLE . doublePtr  (52)

	tTYPEDOUBLE  shift 31
	tIDENTIFIER  reduce 45
	tFAKE  reduce 51
	tFUNCTION  reduce 45

	doublePtr  goto 32


state 8
	type : tTYPESTRING .  (47)

	.  reduce 47


state 9
	$accept : file . $end  (0)

	$end  accept


state 10
	file : decls .  (2)
	decls : decls . decl  (4)

	tFAKE  shift 1
	tUSE  shift 2
	tPUBLIC  shift 3
	tPROCEDURE  shift 4
	tDEFINE  shift 5
	tTYPEINT  shift 6
	tTYPEDOUBLE  shift 7
	tTYPESTRING  shift 8
	$end  reduce 2

	intPtr  goto 11
	doublePtr  goto 12
	stringPtr  goto 13
	type  goto 14
	var  goto 15
	funcDecl  goto 16
	funcDef  goto 17
	func  goto 18
	decl  goto 33


state 11
	type : intPtr . tFAKE  (44)

	tFAKE  shift 34
	.  error


state 12
	type : doublePtr . tFAKE  (46)

	tFAKE  shift 35
	.  error


state 13
	type : stringPtr . tTYPESTRING  (48)

	tTYPESTRING  shift 36
	.  error


state 14
	funcDecl : type . tFUNCTION tIDENTIFIER  (19)
	funcDecl : type . tFUNCTION tIDENTIFIER tUSES params  (21)
	var : type . tIDENTIFIER  (38)
	var : type . tIDENTIFIER '(' tINITIALLY literal ')'  (39)

	tIDENTIFIER  shift 37
	tFUNCTION  shift 38
	.  error


state 15
	decl : var . ';'  (6)

	';'  shift 39
	.  error


state 16
	func : funcDecl . ';'  (7)

	';'  shift 40
	.  error


state 17
	func : funcDef .  (8)

	.  reduce 8


state 18
	decl : func .  (5)

	.  reduce 5


state 19
	decls : decl .  (3)

	.  reduce 3


state 20
	stringPtr : tFAKE stringPtr .  (50)

	.  reduce 50


state 21
	funcDecl : tUSE tPROCEDURE . tIDENTIFIER  (28)
	funcDecl : tUSE tPROCEDURE . tIDENTIFIER tUSES params  (30)

	tIDENTIFIER  shift 41
	.  error


state 22
	funcDecl : tUSE type . tFUNCTION tIDENTIFIER  (27)
	funcDecl : tUSE type . tFUNCTION tIDENTIFIER tUSES params  (29)
	var : tUSE type . tIDENTIFIER  (42)

	tIDENTIFIER  shift 42
	tFUNCTION  shift 43
	.  error


state 23
	funcDecl : tPUBLIC tPROCEDURE . tIDENTIFIER  (24)
	funcDecl : tPUBLIC tPROCEDURE . tIDENTIFIER tUSES params  (26)

	tIDENTIFIER  shift 44
	.  error


state 24
	funcDecl : tPUBLIC type . tFUNCTION tIDENTIFIER  (23)
	funcDecl : tPUBLIC type . tFUNCTION tIDENTIFIER tUSES params  (25)
	var : tPUBLIC type . tIDENTIFIER  (40)
	var : tPUBLIC type . tIDENTIFIER '(' tINITIALLY literal ')'  (41)

	tIDENTIFIER  shift 45
	tFUNCTION  shift 46
	.  error


state 25
	funcDecl : tPROCEDURE tIDENTIFIER .  (20)
	funcDecl : tPROCEDURE tIDENTIFIER . tUSES params  (22)

	tUSES  shift 47
	';'  reduce 20


state 26
	funcDef : tDEFINE tPUBLIC . type tFUNCTION tIDENTIFIER tAS block  (15)
	funcDef : tDEFINE tPUBLIC . tPROCEDURE tIDENTIFIER tAS block  (16)
	funcDef : tDEFINE tPUBLIC . type tFUNCTION tIDENTIFIER tON params tAS block  (17)
	funcDef : tDEFINE tPUBLIC . tPROCEDURE tIDENTIFIER tON params tAS block  (18)

	tFAKE  shift 1
	tPROCEDURE  shift 48
	tTYPEINT  shift 6
	tTYPEDOUBLE  shift 7
	tTYPESTRING  shift 8
	.  error

	intPtr  goto 11
	doublePtr  goto 12
	stringPtr  goto 13
	type  goto 49


state 27
	funcDef : tDEFINE tPROCEDURE . tIDENTIFIER tAS block  (12)
	funcDef : tDEFINE tPROCEDURE . tIDENTIFIER tON params tAS block  (14)

	tIDENTIFIER  shift 50
	.  error


state 28
	funcDef : tDEFINE type . tFUNCTION tIDENTIFIER tAS block  (11)
	funcDef : tDEFINE type . tFUNCTION tIDENTIFIER tON params tAS block  (13)

	tFUNCTION  shift 51
	.  error


state 29
	intPtr : tTYPEINT .  (53)
	intPtr : tTYPEINT . intPtr  (54)

	tTYPEINT  shift 29
	tFAKE  reduce 53

	intPtr  goto 30


state 30
	intPtr : tTYPEINT intPtr .  (54)

	.  reduce 54


state 31
	doublePtr : tTYPEDOUBLE .  (51)
	doublePtr : tTYPEDOUBLE . doublePtr  (52)

	tTYPEDOUBLE  shift 31
	tFAKE  reduce 51

	doublePtr  goto 32


state 32
	doublePtr : tTYPEDOUBLE doublePtr .  (52)

	.  reduce 52


state 33
	decls : decls decl .  (4)

	.  reduce 4


state 34
	type : intPtr tFAKE .  (44)

	.  reduce 44


state 35
	type : doublePtr tFAKE .  (46)

	.  reduce 46


state 36
	type : stringPtr tTYPESTRING .  (48)

	.  reduce 48


state 37
	var : type tIDENTIFIER .  (38)
	var : type tIDENTIFIER . '(' tINITIALLY literal ')'  (39)

	'('  shift 52
	';'  reduce 38


state 38
	funcDecl : type tFUNCTION . tIDENTIFIER  (19)
	funcDecl : type tFUNCTION . tIDENTIFIER tUSES params  (21)

	tIDENTIFIER  shift 53
	.  error


state 39
	decl : var ';' .  (6)

	.  reduce 6


state 40
	func : funcDecl ';' .  (7)

	.  reduce 7


state 41
	funcDecl : tUSE tPROCEDURE tIDENTIFIER .  (28)
	funcDecl : tUSE tPROCEDURE tIDENTIFIER . tUSES params  (30)

	tUSES  shift 54
	';'  reduce 28


state 42
	var : tUSE type tIDENTIFIER .  (42)

	.  reduce 42


state 43
	funcDecl : tUSE type tFUNCTION . tIDENTIFIER  (27)
	funcDecl : tUSE type tFUNCTION . tIDENTIFIER tUSES params  (29)

	tIDENTIFIER  shift 55
	.  error


state 44
	funcDecl : tPUBLIC tPROCEDURE tIDENTIFIER .  (24)
	funcDecl : tPUBLIC tPROCEDURE tIDENTIFIER . tUSES params  (26)

	tUSES  shift 56
	';'  reduce 24


state 45
	var : tPUBLIC type tIDENTIFIER .  (40)
	var : tPUBLIC type tIDENTIFIER . '(' tINITIALLY literal ')'  (41)

	'('  shift 57
	';'  reduce 40


state 46
	funcDecl : tPUBLIC type tFUNCTION . tIDENTIFIER  (23)
	funcDecl : tPUBLIC type tFUNCTION . tIDENTIFIER tUSES params  (25)

	tIDENTIFIER  shift 58
	.  error


state 47
	funcDecl : tPROCEDURE tIDENTIFIER tUSES . params  (22)

	tFAKE  shift 1
	tTYPEINT  shift 6
	tTYPEDOUBLE  shift 7
	tTYPESTRING  shift 8
	.  error

	params  goto 59
	intPtr  goto 11
	doublePtr  goto 12
	stringPtr  goto 13
	type  goto 60
	param  goto 61


state 48
	funcDef : tDEFINE tPUBLIC tPROCEDURE . tIDENTIFIER tAS block  (16)
	funcDef : tDEFINE tPUBLIC tPROCEDURE . tIDENTIFIER tON params tAS block  (18)

	tIDENTIFIER  shift 62
	.  error


state 49
	funcDef : tDEFINE tPUBLIC type . tFUNCTION tIDENTIFIER tAS block  (15)
	funcDef : tDEFINE tPUBLIC type . tFUNCTION tIDENTIFIER tON params tAS block  (17)

	tFUNCTION  shift 63
	.  error


state 50
	funcDef : tDEFINE tPROCEDURE tIDENTIFIER . tAS block  (12)
	funcDef : tDEFINE tPROCEDURE tIDENTIFIER . tON params tAS block  (14)

	tON  shift 64
	tAS  shift 65
	.  error


state 51
	funcDef : tDEFINE type tFUNCTION . tIDENTIFIER tAS block  (11)
	funcDef : tDEFINE type tFUNCTION . tIDENTIFIER tON params tAS block  (13)

	tIDENTIFIER  shift 66
	.  error


state 52
	var : type tIDENTIFIER '(' . tINITIALLY literal ')'  (39)

	tINITIALLY  shift 67
	.  error


state 53
	funcDecl : type tFUNCTION tIDENTIFIER .  (19)
	funcDecl : type tFUNCTION tIDENTIFIER . tUSES params  (21)

	tUSES  shift 68
	';'  reduce 19


state 54
	funcDecl : tUSE tPROCEDURE tIDENTIFIER tUSES . params  (30)

	tFAKE  shift 1
	tTYPEINT  shift 6
	tTYPEDOUBLE  shift 7
	tTYPESTRING  shift 8
	.  error

	params  goto 69
	intPtr  goto 11
	doublePtr  goto 12
	stringPtr  goto 13
	type  goto 60
	param  goto 61


state 55
	funcDecl : tUSE type tFUNCTION tIDENTIFIER .  (27)
	funcDecl : tUSE type tFUNCTION tIDENTIFIER . tUSES params  (29)

	tUSES  shift 70
	';'  reduce 27


state 56
	funcDecl : tPUBLIC tPROCEDURE tIDENTIFIER tUSES . params  (26)

	tFAKE  shift 1
	tTYPEINT  shift 6
	tTYPEDOUBLE  shift 7
	tTYPESTRING  shift 8
	.  error

	params  goto 71
	intPtr  goto 11
	doublePtr  goto 12
	stringPtr  goto 13
	type  goto 60
	param  goto 61


state 57
	var : tPUBLIC type tIDENTIFIER '(' . tINITIALLY literal ')'  (41)

	tINITIALLY  shift 72
	.  error
